feat: add delete & simplify room model
Removed beds entity and used a Capacity value
Added handler, repo method, command and route for delete
